Add about.md, site-brand.html, defaults.yml, banner index.html

--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
 
 layout: home
 title: Home
-banner: "/assets/images/banners/home.jpeg"
+banner:
+    image: "/assets/images/banners/banner.jpg"
+    background: "#000"
+    opacity: 0.85
+sidebar: []
 ---
